# MyG

./: .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  shell.py
agents/code_generation/: __init__.py  agent.py  android_cmake.py  embedded_cmake.py  windows_cmake.py
agents/code_generation/templates/: __init__.py
agents/debugger/: __init__.py  agent.py  build_queue.py  hardware_governor.py  pattern_library.py
agents/knowledge_retrieval/: __init__.py  agent.py
agents/knowledge_retrieval/ingestion/: chunker.py
agents/knowledge_retrieval/retrieval/: qdrant_client.py  query_builder.py
agents/platform_intelligence/: __init__.py  agent.py  detector.py  quirk_profiles.py
agents/self_improvement/: __init__.py  memory_injector.py  pattern_curator.py  prompt_refiner.py  skill_extractor.py
agents/self_update/: __init__.py  agent.py  changelog.py
agents/self_update/monitors/: khronos_monitor.py  vendor_monitor.py
db/: __init__.py  build_queue_store.py  execution_traces.py  skill_writebacks.py
llm/: __init__.py  client.py  embedding_client.py  factory.py  prompt_builder.py
orchestrator/: __init__.py  graph.py  router.py  state.py
tests/integration/: test_knowledge_retrieval.py
tests/unit/: test_bug_classifier.py  test_graphify_reader.py  test_hardware_governor.py  test_llm_factory.py  test_memory_injector.py  test_pattern_curator.py  test_prompt_builder.py  test_quirk_profiles.py  test_skill_extractor.py
tools/: adb_bridge.py  clang_tidy.py  cmake_runner.py  graphify_reader.py  spirv_validator.py
utils/: __init__.py  config.py
vulkanmind/: README.md  main.py  pyproject.toml
vulkanmind/agents/code_generation/: __init__.py  agent.py  linux_cmake.py  validator.py
vulkanmind/agents/debugger/: __init__.py  classifier.py  fragment_isolator.py  pattern_library.py
vulkanmind/agents/knowledge_retrieval/ingestion/: pdf_ingester.py  web_scraper.py
vulkanmind/agents/platform_intelligence/: agent.py  context_schema.py  detector.py
vulkanmind/agents/self_update/: changelog.py
vulkanmind/agents/self_update/monitors/: research_monitor.py
vulkanmind/db/: __init__.py  bug_history.py  session_store.py
vulkanmind/orchestrator/: router.py  state.py
vulkanmind/tests/integration/: test_orchestrator_routing.py
vulkanmind/tests/unit/: test_platform_detector.py
vulkanmind/tools/: __init__.py  glslang.py  renderdoc_parser.py
