[project]
name = "vulkanmind"
version = "0.1.0"
description = "Multi-agent AI system for modern Vulkan graphics engineering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph>=0.2.0",
    "llama-parse>=0.5.0",
    "psutil>=6.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.12.0",
    "rich>=13.7.0",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
providers = [
    "anthropic>=0.49.0",
    "openai>=1.40.0",
    "google-generativeai>=0.5.0",  # Gemini REST is HTTP-only, but keep parity
    "voyageai>=0.2.0",              # Voyage SDK optional; REST also available
    "ollama>=0.2.0",                # local; only used for type stubs
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
